--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ relative_permalinks: true
 # Setup
 title:               Alexandru Tica Blog
 tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+url:                 http://talek.github.io/blog/
 paginate:            1
 baseurl:             ""
 
@@ -20,9 +20,9 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Alexandru Tica
+  url:               http://talek.github.io/blog/
+  email:             alexandru.tica@gmail.com
 
 # Custom vars
 version:             2.0.0
