--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+title:               Alexandru Tică Blog
+tagline:             Random thoughts...
+url:                 http://talek.github.io/blog/
 paginate:            1
 baseurl:             ""
 
@@ -20,9 +20,9 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Alexandru Tică
+  url:               https://twitter.com/talek
+  email:             alexandru.tica@gmail.com
 
 # Custom vars
 version:             2.0.0
