--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,12 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Alexandru Tică Blog
+title:            Alec's Blog
 tagline:          'Random Thoughts...'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      'Notes, random thougths, whatever...'
 url:              http://talek.github.io/blog/
-baseurl:          http://talek.github.io/blog/
+#baseurl:          http://talek.github.io/blog/
+baseurl:          /
 
 author:
   name:           'Alexandru Tica'
