--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ relative_permalinks: true
 title:            Alec's Blog
 tagline:          'Random Thoughts...'
 description:      'Notes, random thougths, whatever...'
-url:              http://talek.github.io/blog/
-baseurl:          http://talek.github.io/blog/
+url:              http://talek.github.io/blog
+baseurl:          /
 #baseurl:          ""
 
 author:
