--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ tagline:          'Random Thoughts...'
 description:      'Notes, random thougths, whatever...'
 url:              http://talek.github.io/blog
 baseurl:          /blog/
-#baseurl:          ""
+#baseurl:          "/"
 
 author:
   name:           'Alexandru Tica'
