--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title:            Alec's Blog
 tagline:          'Random Thoughts...'
 description:      'Notes, random thougths, whatever...'
 url:              http://talek.github.io/blog
-baseurl:          /blog/
+baseurl:          http://talek.github.io/blog/
 #baseurl:          "/"
 
 author:
