--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ relative_permalinks: true
 
 # Setup
 title:            Alec's Blog
-tagline:          'Notes, random thoughts, ideas...'
-description:      'Notes, random thougths, ideas...'
+tagline:          'Notes, ideas and random thoughts...'
+description:      'Notes, ideas and random thougths...'
 url:              http://talek.github.io/blog
 baseurl:          http://talek.github.io/blog/
 #baseurl:          "/"
