--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Dependencies
+gems: [jekyll-paginate]
 markdown:         redcarpet
-highlighter:      pygments
+highlighter:      rouge
 
 # Permalinks
 permalink:        pretty
